chore: bootstrap conventions
